# rustceptron

./: .gitignore  Cargo.toml  README.md
rc_data/: Cargo.toml
rc_data/src/: lib.rs
rc_data/src/layer/: activation_fct.rs  mod.rs
rc_data/src/network/: mod.rs
rc_dataset_generator/: Cargo.toml
rc_dataset_generator/src/: lib.rs
rc_example/: Cargo.toml
rc_example/src/: rc_print_circle.rs  rc_print_rect.rs
rc_visualizer/: Cargo.toml
rc_visualizer/src/: lib.rs
rc_visualizer/src/visualizer_gui/: mod.rs
