[package]
name = "rc_example"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[[bin]]
name = "rc_print_circle"
path = "src/rc_print_circle.rs"

[[bin]]
name = "rc_print_rect"
path = "src/rc_print_rect.rs"

[dependencies]
rc_data = { path = "../rc_data"}
rc_dataset_generator = { path = "../rc_dataset_generator" }
rand = { version = "0.8.5"}
