[package]
name = "rc_visualizer"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[[bin]]
name = "rc_visualizer_gui"
path = "src/bin/main.rs"

[dependencies]
eframe = { version = "0.18.0"}
crossbeam-channel = "0.5.6"
strider = {version = "0.1.3"}
num = {version = "0.4.0"}
itertools = {version = "0.10.5"}
